<resources>
    <string name="app_name">BecomingDev</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="obligatory_field">Campo Obrigatório</string>
    <string name="name">Nome</string>
    <string name="lastname">Sobrenome</string>
    <string name="age">Idade</string>
    <string name="technology">Linguagens</string>
    <string name="experience">Experiências</string>
    <string name="register_new_dev">registrar novo dev</string>
    <string name="social_network">Rede Social</string>
    <string name="e_mail">E-mail</string>
    <string name="contact">Celular</string>
    <string name="send">enviar</string>
    <string name="welcome_back">Bem Vindo De Volta</string>

    <!--Image Helper-->
    <string name="add_image">Adicionar Imagem</string>
    <string name="chose_origin">Escolha a origem da imagem</string>
    <string name="camera">Camera</string>
    <string name="gallery">Galeria</string>
    <string name="image_error">Erro ao carregar imagem</string>
    <string name="image_path">image</string>
    <string name="dados_cadastrais">Dados Cadastrais</string>
    <string name="edit_information">editar informações</string>
    <string name="delete_member">deletar membro</string>
    <string name="edit_info">Editar informações</string>
    <string name="save">Salvar</string>
    <string name="back">voltar</string>
    <string name="yes">sim</string>
    <string name="is_sure">tem certeza</string>
    <string name="members">membros</string>


</resources>